# CraftEngine

./: .gitignore  Autoevaluación Milestone 1v2.odt  CMakeLists.txt  CMakeSettings.json  Doxyfile  FelipeOrtuzar_autoevaluacion_milestone_2.odt  LICENSE  README.md  plantilla_autoevaluacion_milestone_2.odt  ~$lipeOrtuzar_autoevaluacion_milestone_2.odt  ~$toevaluación Milestone 1v2.odt  ~WRL3392.tmp
CMakeConfigFiles/: root_directory.h.in
GomaeronEngine/: .gitignore  CMakeLists.txt
GomaeronEngine/CMakeConfigFiles/: root_directory.h.in
GomaeronEngine/source/: CMakeLists.txt
GomaeronEngine/source/Examples/: CMakeLists.txt  ex_texture_boo.cpp
GomaeronEngine/source/GomaEngineLib/: CMakeLists.txt  basic_shapes.cpp  basic_shapes.h  easy_shaders.cpp  easy_shaders.h  gpu_shape.cpp  gpu_shape.h  load_shaders.cpp  load_shaders.h  root_directory.h  shape.cpp  shape.h  simple_eigen.h  transformations.cpp  transformations.h
assets/imgs/: ACrossAnimations.xcf  ACrossAnimations2.xcf  cav1  cav2  nosexd.xcf
documentation/: Tutorial.md
documentation/Doxygen/: Doxyfile
documentation/html/: _c_r___movable_component_8h_source.html  _component_8h_source.html  _game_object_8h_source.html  _graphic_component_8h_source.html  _input_component_8h_source.html  _sound_component_8h_source.html  _utils_8h_source.html  annotated.html  annotated_dup.js  aplication_8h_source.html  classes.html  classgomaengine_1_1_aplication-members.html  classgomaengine_1_1_aplication.html  classgomaengine_1_1_aplication.js  classgomaengine_1_1_aplication_afad33ce7549400cb18d0bce505e8463e_cgraph.dot  classgomaengine_1_1_c_r___movable_component-members.html  classgomaengine_1_1_c_r___movable_component.html  classgomaengine_1_1_component-members.html  classgomaengine_1_1_component.html  classgomaengine_1_1_game_object-members.html  classgomaengine_1_1_game_object.html  classgomaengine_1_1_game_object.js  classgomaengine_1_1_game_object_a38987365e507d8ddf7f30c8c2e11a9a1_icgraph.dot  classgomaengine_1_1_game_object_a4f88fee54cbf9a371558c2af073185da_icgraph.dot  classgomaengine_1_1_game_object_a5d6a414003baa21722254cb98a7905f3_cgraph.dot  classgomaengine_1_1_game_object_a5d6a414003baa21722254cb98a7905f3_icgraph.dot  classgomaengine_1_1_game_object_a70c438101a5b5c9bf7f3cf7eb4639330_icgraph.dot  classgomaengine_1_1_game_object_a8e6c00070d22715d09df577f2a3610de_cgraph.dot  classgomaengine_1_1_game_object_a9d598e1af60093b7929e3f8fa677a7f5_cgraph.dot  classgomaengine_1_1_graphic_component-members.html  classgomaengine_1_1_graphic_component.html  classgomaengine_1_1_graphic_component.js  classgomaengine_1_1_graphic_component_a60abcce9508d24275db357eb9dba2df4_cgraph.dot  classgomaengine_1_1_graphic_component_a60abcce9508d24275db357eb9dba2df4_icgraph.dot  classgomaengine_1_1_graphic_component_a708d6eba4c526cb69a936fb1f39e27f8_icgraph.dot  classgomaengine_1_1_graphic_component_a7a1b85a01fe69e94157eb3b61537f360_icgraph.dot  classgomaengine_1_1_graphic_component_aa42e6e90f64905ab222858df23fbb366_icgraph.dot  classgomaengine_1_1_graphic_component_aa915e39c124efc213680b0fe19064243_icgraph.dot  classgomaengine_1_1_graphic_component_ad455e63941bf2dbee7b33a9de739f2a4_icgraph.dot  classgomaengine_1_1_graphic_component_aeb5fec2c36cd19cb703c2114da226f01_icgraph.dot  (+46 more)
documentation/latex/: _game_object_8h_source.tex  _sound_component_8h_source.tex  _utils_8h_source.tex  annotated.tex  aplication_8h_source.tex  classgomaengine_1_1_aplication.tex  classgomaengine_1_1_game_object.tex  classgomaengine_1_1_input.tex  classgomaengine_1_1_model.tex  classgomaengine_1_1_sound_component.tex  classgomaengine_1_1_texture.tex  files.tex  refman.tex  (+6 more)
source/: CMakeLists.txt
source/gomaengine/: AnimationComponent.cpp  AnimationComponent.h  CMakeLists.txt  CR_MovableComponent.cpp  CR_MovableComponent.h  Component.cpp  Component.h  GameObject.cpp  GameObject.h  GraphicComponent.cpp  GraphicComponent.h  InputComponent.cpp  InputComponent.h  MovableComponent.cpp  MovableComponent.h  SoundComponent.cpp  SoundComponent.h  Utils.h  aplication.cpp  aplication.h  input.cpp  input.h  input_layer.cpp  model.cpp  model.h  root_directory.h  texture.cpp  texture.h
source/gomaengine_ex/: CMakeLists.txt  wg_test.cpp
(+162 files in other folders)
